# swagger-codegen-bin

./: .gitignore  Cargo.toml  README.md
src/: codegen.config  main.rs
